--- a/Mega6Box/Mega6Box/View/login.storyboard
+++ b/Mega6Box/Mega6Box/View/login.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="YfV-ty-DV7">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22684"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -16,22 +16,58 @@
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Layer_1" translatesAutoresizingMaskIntoConstraints="NO" id="lR9-13-zaC">
+                                <rect key="frame" x="60" y="296" width="273" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="273" id="gXL-J1-Hyz"/>
+                                    <constraint firstAttribute="height" constant="34" id="rl1-pg-gg6"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zwm-Pv-LBh">
+                                <rect key="frame" x="52" y="370" width="289" height="40"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="289" id="gJn-i4-Yth"/>
+                                    <constraint firstAttribute="height" constant="40" id="wJm-Ww-yct"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="회원가입"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vnl-b5-JWN">
+                                <rect key="frame" x="52" y="430" width="289" height="40"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="289" id="FZI-rZ-Qnf"/>
+                                    <constraint firstAttribute="height" constant="40" id="fDJ-nY-27P"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="회원가입"/>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" name="third"/>
+                        <constraints>
+                            <constraint firstItem="vnl-b5-JWN" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="7Lp-Ox-EXy"/>
+                            <constraint firstItem="lR9-13-zaC" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="9ED-3w-lHd"/>
+                            <constraint firstItem="zwm-Pv-LBh" firstAttribute="top" secondItem="lR9-13-zaC" secondAttribute="bottom" constant="40" id="bVb-nP-KLr"/>
+                            <constraint firstItem="lR9-13-zaC" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="237" id="cC7-ZF-PsM"/>
+                            <constraint firstItem="zwm-Pv-LBh" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="s88-43-bOi"/>
+                            <constraint firstItem="vnl-b5-JWN" firstAttribute="top" secondItem="zwm-Pv-LBh" secondAttribute="bottom" constant="20" id="uPa-MN-Zqm"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="vR7-js-pQE"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="450" y="-451"/>
+            <point key="canvasLocation" x="447" y="-451"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="CHh-CL-8aF">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="YfV-ty-DV7" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="YfV-ty-DV7" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="DmW-1s-f0t">
-                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -45,8 +81,9 @@
         </scene>
     </scenes>
     <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
+        <image name="Layer_1" width="273" height="34"/>
+        <namedColor name="third">
+            <color red="0.47099998593330383" green="0.2630000114440918" blue="0.90200001001358032" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
