--- a/Mega6Box/Mega6Box/View/Login.storyboard
+++ b/Mega6Box/Mega6Box/View/Login.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="YfV-ty-DV7">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="fbM-zy-jR3">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -9,23 +9,23 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--LoginController-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
-                <viewController id="Y6W-OH-hqX" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="LoginViewController" title="LoginController" id="Y6W-OH-hqX" customClass="LoginViewViewController" customModule="Mega6Box" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Layer_1" translatesAutoresizingMaskIntoConstraints="NO" id="lR9-13-zaC">
-                                <rect key="frame" x="60" y="296" width="273" height="34"/>
+                                <rect key="frame" x="60" y="340" width="273" height="34"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="273" id="gXL-J1-Hyz"/>
                                     <constraint firstAttribute="height" constant="34" id="rl1-pg-gg6"/>
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zwm-Pv-LBh">
-                                <rect key="frame" x="52" y="370" width="289" height="40"/>
+                                <rect key="frame" x="52" y="414" width="289" height="40"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="289" id="gJn-i4-Yth"/>
@@ -33,16 +33,22 @@
                                 </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="회원가입"/>
+                                <connections>
+                                    <action selector="tapAssignBtn:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="Oda-gT-3Xy"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vnl-b5-JWN">
-                                <rect key="frame" x="52" y="430" width="289" height="40"/>
+                                <rect key="frame" x="52" y="474" width="289" height="40"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="289" id="FZI-rZ-Qnf"/>
                                     <constraint firstAttribute="height" constant="40" id="fDJ-nY-27P"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="회원가입"/>
+                                <buttonConfiguration key="configuration" style="plain" title="로그인"/>
+                                <connections>
+                                    <action selector="tapLoginBtn:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="bDr-Pu-m1V"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
@@ -57,27 +63,32 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="vR7-js-pQE"/>
+                    <connections>
+                        <outlet property="assingButton" destination="zwm-Pv-LBh" id="GRM-XO-XRO"/>
+                        <outlet property="loginButton" destination="vnl-b5-JWN" id="1GV-2u-f6K"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="447" y="-451"/>
+            <point key="canvasLocation" x="-0.76335877862595414" y="-477.46478873239437"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="CHh-CL-8aF">
+        <scene sceneID="xuD-jI-61O">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="YfV-ty-DV7" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="fbM-zy-jR3" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="DmW-1s-f0t">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="pWX-Fo-VCm">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="Y6W-OH-hqX" kind="relationship" relationship="rootViewController" id="SOu-ni-LaP"/>
+                        <segue destination="Y6W-OH-hqX" kind="relationship" relationship="rootViewController" id="Srt-5C-nnT"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="q0G-Zu-T5Y" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6lm-gI-cTf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-335.1145038167939" y="-451.4084507042254"/>
+            <point key="canvasLocation" x="-927.48091603053433" y="-477.46478873239437"/>
         </scene>
     </scenes>
     <resources>
