--- a/Mega6Box/Mega6Box/MovieReservationPage/MovieCell.xib
+++ b/Mega6Box/Mega6Box/MovieReservationPage/MovieCell.xib
@@ -10,7 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="MovieCell" id="gTV-IL-0wX" customClass="MovieCell" customModule="Mega6Box" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="MovieCellReuseIdentifier" id="gTV-IL-0wX" customClass="MovieCell" customModule="Mega6Box" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="84" height="80"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -58,6 +58,7 @@
             </constraints>
             <size key="customSize" width="108" height="118"/>
             <connections>
+                <outlet property="moivecellView" destination="SK0-gZ-YJ2" id="Q8Q-6V-24p"/>
                 <outlet property="seatLabel" destination="NsX-sf-YEb" id="ewj-Id-eSt"/>
                 <outlet property="timeLabel" destination="dmO-Cg-Nyo" id="ddo-XS-ZsL"/>
             </connections>
